--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "render-markdown-js",
-  "description":
-    "Renders markdown files to HTML with highlighted code blocks BUT ALSO RENDERS THE JAVASCRIPT ONES.",
-  "version": "1.0.0",
+  "description": "Renders markdown files to HTML with highlighted code blocks BUT ALSO RENDERS THE JAVASCRIPT ONES.",
+  "version": "1.0.1",
   "main": "index.js",
   "bin": {
     "render-markdown-js": "./bin/cli.js"
